# Curse_Work_4

./: README.md  config.py  main.py  pyproject.toml  requirements.txt  requirementsS.txt
data/: vacancies.json
src/: get_vacancies.py  hh_api.py  json_saver.py  saver.py  utils.py  vacancies.py  vacancy.py
tests/: conftest.py  test_vacancy.py
